# stereomapper

./: .gitignore  README.md  pyproject.toml
experiments/analysis/: 171025_analyse_outputs_ReconXKG_exp.ipynb  171025_compare_molD_ReconXKG_relationships.ipynb  171025_compare_molD_reconxkg_clustering.ipynb  clustering_results.ipynb  relationship_results.ipynb
experiments/benchmarking/: benchmark_diastereomer.ipynb  benchmark_enantiomer.ipynb  benchmark_parent_child.ipynb  benchmark_protomer.ipynb  tests.ipynb
experiments/benchmarking/data/: diastereomer_control_set.csv  enantiomer_control_set.csv  protomers_control_set.csv  stereo_resolution_pairs.csv
src/stereomapper/: cli.py
src/stereomapper/classification/: __init__.py  classifier.py  engine.py  inchi.py
src/stereomapper/comparison/: compare.py
src/stereomapper/config/: integration.py  loader.py  resolvers.py  settings.py
src/stereomapper/data/: cache_repo.py  cache_schema.py  db.py  results_repo.py  results_schema.py
src/stereomapper/domain/: __init__.py  models.py
src/stereomapper/domain/chemistry/: __init__.py  analysis.py  core.py  openbabel.py  utils.py  validation.py
src/stereomapper/models/: stereo_classification.py  stereo_elements.py
src/stereomapper/processing/: __init__.py  batch.py  processor.py  validation.py
src/stereomapper/results/: assemblers.py
src/stereomapper/runners/: pipeline.py
src/stereomapper/scoring/: __init__.py  confidence.py  features.py  models.py
src/stereomapper/utils/: __init__.py  itertools.py  logging.py  suppress.py  timing.py
(+26 files in other folders)
